Added index file and installed Jest library.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "Francisco Costa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^29.7.0"
+  }
 }
